# memory-hub

./: .gitignore  .mcp.json  AGENTS.md  CLAUDE.md  GLOBAL_SKILLS.md  HANDOFF.md  HARDENING_GATE.md  README.md  REDESIGN.md  cli.py  daemon.py  db.py  mcp.py  memory_catalog_plan.md  pyproject.toml  risk_backlog.md  schema.sql  store.py  viewer.py  分享终稿.md  分享草稿.md  验收指标.md
.archive/: REDESIGN.md
.claude/: settings.local.json
.codex/: architecture-catalog-backup-proposal.md
.memory/: BRIEF.md  manifest.json
lib/: brief.py  catalog_read.py  catalog_repair.py  catalog_update.py  cli.py  decision_discovery.py  discovery_cli.py  docs_memory.py  durable_db.py  durable_errors.py  durable_guard.py  durable_mcp_tools.py  durable_proposal_utils.py  durable_repo.py  durable_review.py  durable_store.py  durable_uri.py  envelope.py  execution_contract.py  inbox_clean.py  inbox_list.py  mcp_server.py  memory_index.py  memory_init.py  memory_list.py  memory_read.py  memory_save.py  memory_search.py  memory_write.py  modules_check.py  paths.py  project_memory_projection.py  project_memory_view.py  project_memory_write.py  recall_planner.py  review_cli.py  rollback_cli.py  scan_modules.py  session_extract.py  session_working_set.py  (+1 more)
memory_hub/: __init__.py  acceptance.py  catalog.py  catalog_indexer.py  catalog_worker.py  drift.py  errors.py  policy.py  schema.sql  server.py  store.py  sync.py  validation.py
memory_hub.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
samples/: acceptance_template.jsonl
scripts/: backup_project.py  evaluate_handoff_hit_rate.py  (+5 more)
(+150 files in other folders)
