[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "memory-hub"
version = "0.2.0"
description = "Local-first MCP memory hub with role-isolated sync and catalog context"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "sunpure" }]
dependencies = []

[project.scripts]
memory-hubd = "memory_hub.server:main"

[tool.setuptools]
packages = ["memory_hub"]

[tool.setuptools.package-data]
memory_hub = ["migrations/*.sql", "schema.sql"]
