[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "memory-hub"
version = "0.1.0"
description = "Project knowledge base with on-demand retrieval for AI assistants"
requires-python = ">=3.10"
license = "MIT"

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[project.scripts]
memory-hub = "lib.cli:main"

[tool.setuptools.packages.find]
include = ["lib*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
